<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/user"
        android:layout_width="256dp"
        android:layout_height="55dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="178dp"
        android:layout_marginRight="80dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/email"
        android:layout_width="254dp"
        android:layout_height="57dp"
        android:layout_below="@+id/user"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="80dp"
        android:hint="@string/emailid" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="253dp"
        android:layout_height="62dp"
        android:layout_below="@+id/email"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="17dp"
        android:layout_marginRight="80dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:layout_alignEnd="@+id/pass"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="6dp"
        android:text="@string/signup"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="105dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="116dp"
        android:fontFamily="@font/aladin"
        android:text="@string/already_registered_login"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="96dp"
        android:layout_height="57dp"
        android:background="@color/white"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="@string/todo1" />
</RelativeLayout>