<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/user"
        android:layout_width="256dp"
        android:layout_height="72dp"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="232dp"
        android:layout_marginRight="80dp"
        android:hint="@string/username" />

    <EditText
        android:id="@+id/pass"
        android:layout_width="248dp"
        android:layout_height="70dp"
        android:layout_below="@+id/user"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="80dp"
        android:hint="@string/password" />

    <Button
        android:id="@+id/b1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pass"
        android:layout_alignStart="@+id/pass"
        android:layout_alignEnd="@+id/pass"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="57dp"
        android:layout_marginEnd="6dp"
        android:text="Login"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/signUp"
        android:layout_width="190dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/b1"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="109dp"
        android:layout_marginTop="91dp"
        android:layout_marginEnd="112dp"
        android:fontFamily="@font/aladin"
        android:text="@string/not_a_member_sign_up_now"
        android:textColor="@color/black"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="96dp"
        android:layout_height="57dp"
        android:background="@color/white"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        android:contentDescription="TODO" />
</RelativeLayout>